2005-08-23  Petr Ovtchenkov  <ptr@island...>

	* stlport/config/stl_gcc.h: seems HP-UX has no *f variants of math
	functions [ceilf, fabsf, etc.]

2005-08-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string.h, _rope.h: Removed __move_traits specialization
	for string wstring crope and wrope. There is no reason to believe that
	its move construtor will be complete as an STLport user has the right
	to specialized the std::allocator<char> or wchar_t.

	* stlport/stl/_function_base.h, _alloc.h: Generalized use of the
	__stlport_class struct rather than introducing a new helper type
	(__stlport_less or __stlport_alloc) when we need to recognize STLport
	implementation from a user one.

2005-08-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/_list.h, _slist.h: Fix move constructor implementation
	thanks Henrik Goldman (www.x-formation.com) report.

	* stlport/stl/_alloc.h: Fix type_traits specialization for allocator
	type. Now specialization is only apply for the default STLport allocator
	implementation and not for potential user specialization.

	* stlport/stl/_deque.h, _hashtable.h, _string.h, _tree.h, _vector.h:
	Simplification of the move framework application especially in the
	definition of the containers __move_traits specialization. Many 
	_AsMoveSource call replaced by explicit call to the move constructor
	when we are sure that there is one.

	* test/unit/mvctor_test.cpp: Add many tests to check move contructor
	implementations.

	* stlport/stl/_function_base.h: Add type_traits specialization for the
	less functor to help the move framework when dealing with associative
	containers.

	* test/unit/mvctor_test.cpp: Add a new test case checking correct move
	semantic support for all STL containers.

	* stlport/stl/_rope.h: Add move semantic support to the rope class.

2005-08-19  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/gcc.mak: fix extraction of gcc version.
	Thanks Thomas Kho.

2005-08-18  Francois Dumont  <dums@stlport...>
